<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_white"
        tools:context=".PlayerActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_untitled" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="94dp"
            android:background="@drawable/custom"
            android:contentDescription="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_pause" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/custom_next_previous"
            android:contentDescription="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.171"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:srcCompat="@drawable/ic_baseline_skip_next_24" />

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="90dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/custom_next_previous"
            android:contentDescription="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintHorizontal_bias="0.826"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_previous" />

        <ImageButton
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/custom"
            android:contentDescription="@string/todo3"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_repeat"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/custom_red_buttons"
            android:contentDescription="@string/todo"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_shuffle_24" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="46dp"
            android:background="@drawable/custom_red_buttons"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_shuffle_24" />

        <ImageButton
            android:id="@+id/tune"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@null"
            android:contentDescription="@string/tune"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_tune_24"
            tools:ignore="ImageContrastCheck"
            app:tint="@color/red" />

        <ImageButton
            android:id="@+id/three_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="69dp"
            android:background="@null"
            android:contentDescription="@string/more"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more24"
            app:tint="@color/red"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/like"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="25dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/like"
            android:padding="10dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/filledheart"
            app:tint="@color/red"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/battlesymphony"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/my_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/linkin_park"
            android:textColor="@color/my_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/songName" />

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/one_more_light"
            android:textColor="@color/my_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artistName" />

        <View
            android:id="@+id/view2"
            android:layout_width="30dp"
            android:layout_height="7dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Name" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_next_previous"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="/"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            android:text="2:30"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:text="3:36"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>